test/testdata/functions/invalid_unary_op_error_builtin.lox
-clock; // error: - operator cannot be used with type function
